# TRAPD

./: .gitattributes  .gitignore  Cargo.toml  README-db.md  README-ingest.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  start_all.sh
backend/python_ai/: .env  requirements.txt
backend/python_ai/src/: main.py
backend/python_ai/tests/: test_honeypot_routes.py
backend/rust_honeypots/: .env  Cargo.toml
backend/rust_honeypots/src/: common.rs  http_honeypot.rs  main.rs  ssh_honeypot.rs
backend/supabase/supabase/migrations/: 20250723090333_initial_schema.sql  20250723090334_add_geoip_fields.sql  20250801000001_add_browser_fingerprints.sql  20250801000002_add_fingerprinting_fields.sql
backup/: events.parquet
db/: indexes.sql  ingest.sql  schema.sql  smoke.sql
frontend/: .env.example  package-lock.json  package.json  supabaseClient.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/uebersicht/: page.tsx
frontend/app/live-monitor/: page.tsx
frontend/components/: app-sidebar.tsx  theme-provider.tsx
frontend/components/disinformation/: disinformation-card.tsx  disinformation-list.tsx  types.ts
frontend/public/: site.webmanifest
services/api-rs/: .env.example  Cargo.toml
services/api-rs/src/: main.rs
services/frontend/: README-AUTH.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
services/frontend/app/: layout.tsx
services/frontend/app/dashboard/: page.tsx
services/frontend/app/forgot-password/: page.tsx
services/frontend/app/login/: page.tsx
services/frontend/components/: app-sidebar.tsx  event-type-tooltip.tsx  health-sensors.tsx  live-feed-filters.tsx  live-feed.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  otp-form.tsx  overview-cards.tsx  severity-badge.tsx  sidebar-favorites-context.tsx  top-offenders.tsx  trends.tsx
services/frontend/hooks/: useApi.ts
services/frontend/lib/: auth.ts  email.ts
services/frontend/prisma/: schema.prisma
services/frontend/scripts/: install-auth.sh
services/processor-rs/: Cargo.toml
services/processor-rs/src/: main.rs
services/sensor-rs/: Cargo.toml
services/sensor-rs/src/: main.rs
tools/: bootstrap-db.ps1  bootstrap-ingest.ps1  bootstrap.ps1  create-readonly-user.sql  db-export.ps1  gen-load.ps1
(+22 files in other folders)
