[package]
name = "rust_honeypots"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
url = "2" # Immer noch gut für allgemeines URL-Handling, auch wenn wir OriginalUri für den Pfad nutzen