[package]
name = "rust_honeypots"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
# NEU: Nur noch grundlegende Deps für einfachen SSH Honeypot
# russh = "0.40.1"     # ENTFERNEN
# russh-sftp = "2.1.1" # ENTFERNEN
# async-trait = "0.1" # ENTFERNEN
# russh-keys = "0.40.1" # ENTFERNEN