[package]
name = "rust_honeypots"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
urlencoding = "2.1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
once_cell = "1.19"